<resources>
    <string name="app_name">VNews</string>

    <!-- network -->
    <string name="connect_error">Network is error, Please check the network</string>
    <string name="connect_timeout">The connection is timeout. Please try again later</string>
    <string name="bad_network">Server exception</string>
    <string name="parse_error">Parsing server response data failure</string>
    <string name="unknown_error">unknown error</string>
    <string name="response_return_error">Server failed to return data</string>
    <!-- title -->
    <string name="title_news">News</string>
    <string name="title_word">Word</string>
    <string name="title_message">Message</string>
    <string name="title_me">Me</string>


    <string name="register">Register</string>

    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="start_login">Start Login</string>
    <string name="loading_login">Loading</string>
    <string name="prompt_phone">Please input phone</string>
    <string name="prompt_phone_code">Please input code</string>
    <string name="register_next">next</string>
    <string name="register_input_phone">Input Telephone</string>
    <string name="register_done">Done</string>
    <string name="news_brief">President Donald Trump has announced that the US now recognises Jerusalem.</string>
    <string name="news_title">President Donald Trump has announced that the US now recognises Jerusalem.</string>
    <string name="news_category">World</string>
    <string name="news_level">CET-6</string>
    <string name="news_likes">Likes</string>
    <string name="news_views">Views</string>
    <string name="news_comments">Comments</string>
    <string name="message_from">Phoenix</string>
    <string name="message_action">Commented</string>
    <string name="message_to">Hadoop</string>
    <string name="message_content">这篇文章太有道理了, 写的很好, 给作者打Call~~~~~~~~~~</string>
    <string name="message_date">Yesterday 12:00</string>
    <string name="message_bottom">No more messages</string>
    <string name="sheet_word">support</string>
    <string name="sheet_means">vt.	采取; 拿，取; 接受（礼物等）; 耗费（时间等）;\nvi.	拿; 获得;</string>
    <string name="word_voice">[teɪk]</string>
    <string name="word_collect">Collect</string>
    <string name="word_title">conservation</string>
    <string name="word_means">n. 保存，防止流失，保护自然资源</string>
    <string name="news_detail_source_title">China Daily</string>
    <string name="news_detail_description">Tearing up long-standing convention President Trump says the US recognises Jerusalem as Israel's capital</string>
    <string name="news_detail_source">Source:</string>
    <string name="news_detail_content">President Donald Trump has announced that the US now recognises Jerusalem as Israel's </string>
    <string name="news_detail_date">Yesterday 10:20</string>
    <string name="sheet_word_detail">View Detail</string>
    <string name="comment_date">One day before</string>
    <string name="comment_reply">Reply</string>
    <string name="comment_like_num">12</string>
    <string name="comment">Comment</string>
    <string name="comment_no_more">No more comments</string>
    <string name="me_username">Phoenix</string>
    <string name="me_motto">Live for War， Stop Until Death</string>
    <string name="me_login">Login</string>
    <string name="me_collect">My Collections</string>
    <string name="me_comment">My Comments</string>
    <string name="me_settings">General</string>
    <string name="word_search">Search Word</string>
    <string name="title_activity_word_detail">WordDetailActivity</string>
    <string name="word_book_title">Collect</string>
    <string name="fragment_collect">No more words</string>
    <string name="me_track">Track</string>
    <string name="word_unknown">Unknown</string>
    <string name="word_know">Know</string>
    <string name="no_more_message">No more message</string>
    <string name="me_comments">My Comments</string>
    <string name="word_detail">Word Details</string>
    <string name="news_detail">News Details</string>
    <string name="word_recite">Recite</string>
    <string name="me_info">My Information</string>
    <string name="settings">Settings</string>
    <string name="Notifications">Notification</string>
    <string name="image_loading">Load Image</string>
    <string name="about_me">About mine</string>
    <string name="update_version">Update</string>
    <string name="clear_cache">Clean</string>
    <string name="login_out">Login Out</string>
    <string name="load_error">Load Error</string>
    <string name="word_speak">Speak Schema</string>
    <string name="word_collect_success">Collect Success</string>
    <string name="word_collect_fail">Collect Fail</string>
    <string name="please_login">Please Login</string>
    <string name="error">Error</string>
    <string name="message_reply">replyed</string>
    <string name="message_comment">Commtented</string>
    <string name="message_me">I</string>
</resources>
