<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.login.LoginFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_telephone_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/register">
    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/prompt_phone"
            android:maxLines="1"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_phone_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone_code"
                android:maxLines="1"
                android:layout_weight="3"
                android:inputType="number"/>
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="Get Code"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/register_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_next"
        style="?android:textAppearanceSmall" />
</LinearLayout>