<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_4"
    app:cardCornerRadius="@dimen/dp_4">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/news_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/news_item_title_text_size"
            android:textStyle="bold"
            android:textColor="@color/news_item_title_color"
            android:text="@string/news_title"/>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_toStartOf="@id/news_item_image"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:id="@+id/news_item_brief"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/news_item_info_text_size"
                   android:textColor="@color/news_item_title_color"
                   android:text="@string/news_brief"/>
               <LinearLayout
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="3dp">
                   <TextView
                       android:textSize="11dp"
                       android:id="@+id/news_item_view"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="10" />
                   <TextView
                       android:textSize="11dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/news_views"
                       android:layout_marginStart="@dimen/dp_4"/>
                   <TextView
                       android:textSize="11dp"
                       android:id="@+id/news_item_follow"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="10"
                       android:layout_marginStart="@dimen/dp_10"/>
                   <TextView
                       android:textSize="11dp"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/news_likes"
                       android:layout_marginStart="@dimen/dp_4"/>

                   <TextView
                       android:textSize="11sp"
                       android:id="@+id/news_item_level"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/news_level"
                       android:layout_marginStart="@dimen/dp_10"/>
                   <TextView
                       android:textSize="11sp"
                       android:id="@+id/news_item_category"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/news_category"
                       android:layout_marginStart="@dimen/dp_10"/>
               </LinearLayout>
           </LinearLayout>
           <ImageView
               android:id="@+id/news_item_image"
               android:layout_width="@dimen/news_image_size"
               android:layout_height="@dimen/news_image_size"
               android:layout_alignParentEnd="true"
               android:layout_margin="@dimen/dp_4"
               android:src="@drawable/user"/>
       </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>