<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_4"
    app:cardCornerRadius="@dimen/dp_4">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginBottom="@dimen/dp_6">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/comment_item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user_image"
            android:layout_margin="@dimen/dp_4"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/comment_item_image">
            <TextView
                android:id="@+id/comment_item_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_from"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textSize="@dimen/sp_20"/>
            <TextView
                android:id="@+id/message_item_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/comment_item_like"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_thumb_up_black_24dp"
                    android:layout_marginEnd="@dimen/dp_2"/>
                <TextView
                    android:id="@+id/comment_item_like_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/comment_like_num"
                    android:textSize="@dimen/sp_16"
                    android:layout_marginEnd="@dimen/dp_10"/>
                <TextView
                    android:id="@+id/comment_item_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:text="@string/comment_reply"/>
                <TextView
                    android:id="@+id/comment_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/comment_date"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>