<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    style="?attr/bottomSheetStyle"
    android:id="@+id/word_layout_sheet"
    android:background="@color/colorBaseBackground">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sheet_word_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sheet_word"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:textSize="@dimen/sp_30"
                tools:ignore="RelativeOverlap"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sheet_word_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_voice"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/dp_2"
                android:layout_marginStart="@dimen/dp_10"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/sheet_word_voice_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_volume_up_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"/>
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sheet_means"
        android:textSize="@dimen/sp_16"
        android:id="@+id/sheet_word_means"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:textSize="@dimen/sp_18"
        android:paddingStart="@dimen/dp_6"
        android:paddingEnd="@dimen/sp_16"
        android:id="@+id/sheet_word_detail"
        android:textColor="@android:color/black"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_book_black_24dp"
        android:text="@string/sheet_word_detail"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:textSize="@dimen/sp_16"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/sp_16"
        android:id="@+id/sheet_word_collect"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ripple_collect"
        android:text="@string/word_collect"
        android:layout_marginBottom="@dimen/dp_24"/>

</LinearLayout>