<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.login.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/login_register"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:background="?android:selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/login_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/user" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/login_sign"
            android:background="@drawable/ripple_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_login"
            style="?android:textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>