<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/news_details_coordinator_layout">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/news_details_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/news_details_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|enterAlways">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/news_details_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:scrollbarStyle="insideInset"
                android:src="@drawable/placeholder"
                android:scrollbarAlwaysDrawVerticalTrack="true" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/news_details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@android:color/transparent"
                app:titleTextColor="@drawable/nav_item_color" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/news_details_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Content View -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10">
            <TextView
                android:id="@+id/news_detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:text="@string/news_detail_description"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/news_detail_source_layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news_detail_source"/>
                    <TextView
                        android:id="@+id/news_detail_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:text="@string/news_detail_source_title"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/news_detail_date_layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">
                    <TextView
                        android:id="@+id/news_detail_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news_detail_date"/>
                </LinearLayout>

            </RelativeLayout>

            <com.mobile.vnews.util.select.WordSelectedTextView
                android:id="@+id/news_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/sp_18"
                android:textAlignment="gravity"
                android:lineSpacingExtra="4dp"
                app:highlightText="that"
                android:text="@string/news_detail_content"/>

            <LinearLayout
                android:id="@+id/news_detail_comment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp_24">
                <TextView
                    android:id="@+id/news_detail_comment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/comment"
                    android:textSize="@dimen/sp_20"
                    android:textColor="@android:color/white"
                    android:background="@drawable/ripple_collect"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/news_detail_comment_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10">

                </android.support.v7.widget.RecyclerView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/fragment_message_empty_view"
                    android:visibility="visible"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="@dimen/dp_24">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/comment_no_more"
                        android:textColor="@color/colorAccent"
                        android:textAlignment="center"
                        android:layout_marginBottom="@dimen/dp_24"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/news_detail_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border_black_24dp"
        app:layout_anchor="@+id/news_details_app_bar"
        app:layout_anchorGravity="center|bottom|right" />

</android.support.design.widget.CoordinatorLayout>

